infrastructure/base/portainer-run/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-run
  namespace: portainer-run
  labels:
    app: portainer-run
spec:
  type: ClusterIP
  selector:
    app: portainer-run
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
