infrastructure/base/portainer-run/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-run
  namespace: portainer-run
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer-run.k8s.shubhamtatvamasi.com`)
      kind: Rule
      services:
        - name: portainer-run
          namespace: portainer-run
          port: 443
          scheme: https
          serversTransport: portainer-run
  tls:
    secretName: portainer-run-tls
